--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,3 +5,5 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+  footer
+    p Version: #{packageInfo.version}, Pricing Data: #{moment(pricingLoaded).format('L')}
