added totalling of selected items

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,4 @@ html
   body
     block content
   footer
-    p Version: #{packageInfo.version}, Pricing Data: #{moment(pricingLoaded).format('L')}
+    p Version: #{packageInfo.version}, Pricing Data: #{pricingRegion}@#{moment(pricingLoaded).format('L')}
