--- a/views/index.jade
+++ b/views/index.jade
@@ -1,14 +1,17 @@
 extends layout
 
 block content
-  h1= title
-  each group in groups
-    table
-      thead
-        tr
-            th(colspan=2)=group.category + "/" + group.name
-      tbody
-        each item in group.types
+    form(method='post')
+      each group in groups
+        table
+          thead
             tr
-                td=item.typeName
-                td=numeral(item.marketstat.sell.avg).format('$0,0.00')
+                th(colspan=3)=group.category + "/" + group.name
+          tbody
+            each item in group.types
+                tr
+                    td=item.typeName
+                    td=numeral(item.marketstat.sell.avg).format('$0,0.00')
+                    td
+                        input(id=item.typeID,type='text',name=item.typeID)
+      input(type="submit", value="Submit")
