--- a/views/index_post.jade
+++ b/views/index_post.jade
@@ -6,7 +6,7 @@ block content
         tr
             th(colspan=4) Contract Detail
       tbody
-        each item in result.types
+        each item in types
             tr
                 td=item.type.typeName
                 td=numeral(item.type.marketstat.sell.avg).format('$0,0.00')
@@ -15,5 +15,5 @@ block content
       tfoot
         tr
             td(colspan=2) Total
-            td=result.count
-            td=numeral(result.total).format('$0,0.00')
+            td=count
+            td=numeral(total).format('$0,0.00')
