changed pricing structure

--- a/views/index.jade
+++ b/views/index.jade
@@ -10,8 +10,8 @@ block content
           tbody
             each item in group.types
                 tr
-                    td=item.typeName
+                    td=item.info.typeName
                     td=numeral(item.marketstat.sell.avg).format('$0,0.00')
                     td
-                        input(id=item.typeID,type='text',name=item.typeID)
+                        input(id=item.info.typeID,type='text',name=item.info.typeID)
       input(type="submit", value="Submit")
