--- a/views/index_post.jade
+++ b/views/index_post.jade
@@ -8,7 +8,7 @@ block content
       tbody
         each item in types
             tr
-                td=item.type.typeName
+                td=item.type.info.typeName
                 td=numeral(item.type.marketstat.sell.avg).format('$0,0.00')
                 td=item.count
                 td=numeral(item.total).format('$0,0.00')
