--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    img(src='/images/logo.png')
     block content
   footer
     p Version: #{packageInfo.version}, Pricing Data: #{pricingRegion}@#{moment(pricingLoaded).format('L')}
