--- a/views/index_post.jade
+++ b/views/index_post.jade
@@ -9,7 +9,7 @@ block content
         each item in types
             tr
                 td=item.type.info.typeName
-                td=numeral(item.type.marketstat.sell.avg).format('$0,0.00')
+                td=numeral(item.type.price).format('$0,0.00')
                 td=item.count
                 td=numeral(item.total).format('$0,0.00')
       tfoot
