cleanup unused code

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
     p Copy and Paste from the List View of EVE Online's Hanger or simply list items and amounts
-    p Exmples of listing items:
+    p Exmples of listing items and amounts:
     ol
         li Clear Icicle x10
         li Krystallos 13
